--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{chen2022statistical,
-  abbr={Neurips},
+  abbr={NeurIPS},
   title={On the statistical efficiency of reward-free exploration in non-linear RL},
   author={Chen*, Jinglin and Modi*, Aditya and Krishnamurthy, Akshay and Jiang, Nan and Agarwal, Alekh},
   journal={Advances in Neural Information Processing Systems,},
