--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@ the additive error of occupancy estimation is incompatible with the multiplicati
 coverage. In the absence of strong assumptions like reachability, this incompatibility easily leads to
 exponential error blow-up, which we overcome via novel technical tools. Our results also readily extend
 to the representation learning setting, when the density features are unknown and must be learned from
-an exponentially large candidate set.}
+an exponentially large candidate set.},
   arxiv={2302.02252},
 }
 
