--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{huang2023reinforcement,
-  abbr={Under Review},
+  abbr={ICML},
   title={Reinforcement Learning in Low-Rank MDPs with Density Features},
   author={Huang*, Audrey and Chen*, Jinglin and Jiang, Nan},
   journal={arXiv preprint,},
