--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
   abbr={ICML},
   title={Reinforcement Learning in Low-Rank MDPs with Density Features},
   author={Huang*, Audrey and Chen*, Jinglin and Jiang, Nan},
-  journal={arXiv preprint,},
+  journal={International Conference on Machine Learning,},
   year={2023},
   abstract={MDPs with low-rank transitions—that is, the transition matrix can be factored into the product of
 two matrices, left and right—is a highly representative structure that enables tractable learning. The
