--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{huang2023reinforcement,
   abbr={ICML},
-  title={Reinforcement Learning in Low-Rank MDPs with Density Features},
+  title={Reinforcement learning in low-rank MDPs with density features},
   author={Huang*, Audrey and Chen*, Jinglin and Jiang, Nan},
   journal={International Conference on Machine Learning,},
   year={2023},
