--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -57,13 +57,13 @@ an exponentially large candidate set.},
 
 
 @article{modi2021model,
-  abbr={Under Review},
+  abbr={JMLR},
   title={Model-free representation learning and exploration in low-rank mdps},
   author={Modi*, Aditya and Chen*, Jinglin and Krishnamurthy, Akshay and Jiang, Nan and Agarwal, Alekh},
-  journal={arXiv preprint,},
-  year={2021},
-  abstract={The low rank MDP has emerged as an important model for studying representation learning and exploration in reinforcement learning. With a known representation, several model-free exploration strategies exist. In contrast, all algorithms for the unknown representation setting are model-based, thereby requiring the ability to model the full dynamics. In this work, we present the first model-free representation learning algorithms for low rank MDPs. The key algorithmic contribution is a new minimax representation learning objective, for which we provide variants with differing tradeoffs in their statistical and computational properties. We interleave this representation learning step with an exploration strategy to cover the state space in a reward-free manner. The resulting algorithms are provably sample efficient and can accommodate general function approximation to scale to complex environments.},
-  arxiv={2102.07035},
+  journal={Journal of Machine Learning Research,},
+  year={2024},
+  abstract={The low-rank MDP has emerged as an important model for studying representation learning and exploration in reinforcement learning. With a known representation, several model-free exploration strategies exist. In contrast, all algorithms for the unknown representation setting are model-based, thereby requiring the ability to model the full dynamics. In this work, we present the first model-free representation learning algorithms for low-rank MDPs. The key algorithmic contribution is a new minimax representation learning objective, for which we provide variants with differing tradeoffs in their statistical and computational properties. We interleave this representation learning step with an exploration strategy to cover the state space in a reward-free manner. The resulting algorithms are provably sample efficient and can accommodate general function approximation to scale to complex environments.},
+  html={https://www.jmlr.org/papers/volume25/22-0687/22-0687.pdf},
 }
 
 @article{zhou2020nonstationary,
